TG-2064: Invoice page is having and overlapping issue of text with buttons and View Invoice button and other columns are not showing on mobile screen. (#1047)
* TG-2064: Invoice page is having and overlapping issue of text with buttons and View Invoice button and other columns are not showing on mobile screen.

* TG-2064:code smell resolved

* TG-2064:Refactor code smell

* TG-2064:sonar issue resolved

* TG-2064:Sonar issues resolved

--- a/tag_workflow/public/css/tag.css
+++ b/tag_workflow/public/css/tag.css
@@ -967,6 +967,7 @@ input.input-with-feedback.form-control,
   }
   .page-title .title-area .title-text {
     padding-left: 20px;
+    padding-top: 20px;
     font-weight: 500;
     font-size: 18px;
     color: #4e4e4e;
@@ -1015,6 +1016,17 @@ input.input-with-feedback.form-control,
   }
   [data-fieldname="get_data_from_jazzhr"] button {
     margin-top: 0px;
+  }
+  [data-page-route="List/Sales Invoice/List"] .frappe-list .result {
+    overflow: auto;
+    min-height: auto;
+  }
+  [data-page-route="List/Sales Invoice/List"] .frappe-list .result header,
+  [data-page-route="List/Sales Invoice/List"]
+    .frappe-list
+    .result
+    .list-row-container {
+    width: 650px;
   }
 }
 
